--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 REACT_APP_NODE_ENV=DEV
 
 REACT_APP_MAINTENANCE=false
-REACT_APP_PATH=
+REACT_APP_PATH=/tcg-awards-site
 
 # CONTACT
 REACT_APP_SUPPORT_MAIL=support@domain.com
