--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "dotenv -e .env.prod -- npm run build",
+    "deploy": "pages -d build",
     "dev": "dotenv -e .env.dev -- react-scripts start",
-    "build": "dotenv -e .env.prod -- react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
