--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "predeploy": "dotenv -e .env.prod -- npm run build",
-    "deploy": "pages -d build",
+    "deploy": "gh-pages -d build",
     "dev": "dotenv -e .env.dev -- react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -50,6 +50,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^17.2.1",
     "dotenv-cli": "^11.0.0",
+    "gh-pages": "^6.3.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5"
   }
