--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tcg-awards-site",
   "version": "0.1.0",
+  "homepage": "https://githubkaan.github.io/tcg-awards-site",
   "private": true,
   "dependencies": {
     "http-status-codes": "^2.3.0",
